# djcraft

./: .gitignore  README.md  pyproject.toml
boilerplate_generator/: cli.py  config.py  exceptions.py  generator.py  project_structure_manager.py  rules.py
boilerplate_generator/templates/app_template/: admin.py.template  apps.py.template  urls.py.template
boilerplate_generator/templates/project_template/: manage.py.template
dj-eleva/: main.py  myproject.json  new_config.yaml  newproject_config.yaml
dj-eleva/.trae/: settings.json
dj-eleva/cli/: argument_parser.py  commands.py  config_io.py
dj-eleva/cli/interactive/: __init__.py  menu.py  prompts.py  ui.py
dj-eleva/core/: config.py  configuration_manager.py  exceptions.py  project_structure_manager.py  rules.py  runtime_config.py
dj-eleva/generator/: __init__.py  abstract_generator.py  app_generator.py  base_generator.py  base_project_files_generator.py  core_file_generator.py  directory_creator.py  file_renderer.py  generator_factory.py  requirements_manager.py  service_generator.py
dj-eleva/generator/rendering/: __init__.py  renderer_strategy.py
dj-eleva/generator/services/: auth_generator.py  base.py  (+5 more)
dj-eleva/myproject/: README.md  manage.py
dj-eleva/tests/: test_app_generator.py
djcraft/: main.py  myproject.json  myproject_config.yaml  new.yml  vetting_config.yaml
djcraft/cli/: argument_parser.py  commands.py  config_io.py
djcraft/core/: config.py  exceptions.py  runtime_config.py
djcraft/generator/: __init__.py  generator.py  requirements_manager.py
djcraft/tests/: test_app_generator.py
(+55 files in other folders)
